2008-04-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/support.c:
	(clearlooks_scrollbar_get_junction):
	* engines/industrial/src/industrial_style.c: (draw_slider):
	* engines/mist/src/mist-style.c: (mist_style_draw_box):
	Fix part 1 of bug #526890 in all affected engines. (Inverted
	scrollbars should work fine now, stepper buttons are still ignored.)

2008-04-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.14.1 release.

2008-04-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/torture:
	Fix running the tests when building out of tree.

2008-04-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_focus):
	Add a workaround for the panel ButtonWidget. This is hopefully just
	a intermediate solution until a real fix exists.

2008-04-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Work around GTK+ drawing the "spinbutton" box always with state
	NORMAL.

2008-04-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters):
	Undo Andrea's change from 2008-03-19. The check was moved to fix
	the spinbutton arrow sensitivity. (See bug #475629.)

2008-03-20  Christian Persch  <chpe@gnome.org>

	* configure.ac: Add AM_PROG_CC_C_O. Bug #523369.

2008-03-19  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters):
	Fix? Workaround?
	Anyway this fixes insensitive spinbuttons

2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scale_trough):
	Use shade[2] taken from parentbg to draw the scale trough

2008-03-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/support.c: (clearlooks_get_parent_bg):