@@ -516,6 +516,7 @@ draw_slider (GtkStyle      *style,
 	/* This makes the slider overlay the stepper buttons at the sides. XXX */
 	if (widget && GE_IS_SCROLLBAR (widget)) {
 		GtkAdjustment *adjustment = GTK_RANGE (widget)->adjustment;
+
 		/* If all of these values are 0, don't do anything.  This fixes mozilla/galeon scrollbars. */
 		if (adjustment->value ||
 		    adjustment->lower ||
@@ -523,7 +524,8 @@ draw_slider (GtkStyle      *style,
 		    adjustment->step_increment ||
 		    adjustment->page_increment ||
 		    adjustment->page_size) {
-			if (adjustment->value <= adjustment->lower) {
+			if ((adjustment->value <= adjustment->lower) &&
+			    (GTK_RANGE (widget)->has_stepper_a || GTK_RANGE (widget)->has_stepper_b)) {
 				if (orientation == GTK_ORIENTATION_VERTICAL) {
 					if (!gtk_range_get_inverted (GTK_RANGE (widget)))
 						y--;
@@ -534,7 +536,8 @@ draw_slider (GtkStyle      *style,
 					width++;
 				}
 			}
-			if (adjustment->value >= adjustment->upper - adjustment->page_size) {
+			if ((adjustment->value >= adjustment->upper - adjustment->page_size) &&
+			    (GTK_RANGE (widget)->has_stepper_a || GTK_RANGE (widget)->has_stepper_b)) {
 				if (orientation == GTK_ORIENTATION_VERTICAL) {
 					if (gtk_range_get_inverted (GTK_RANGE (widget)))
 						y--;
